provarAnt/00D190000000ZY2EAM/objects/SkyEditor2__SearchCondition__c.object
<CustomObject>
    <fields>
        <fullName>SkyEditor2__ConditionName__c</fullName>
        <defaultValue>$User.Id + TEXT(NOW())</defaultValue>
        <label>ConditionName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SkyEditor2__Condition__c</fullName>
        <label>Condition</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SkyEditor2__PageName__c</fullName>
        <label>PageName</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SkyEditor2__SearchConditionName__c</fullName>
        <label>SearchConditionName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SkyEditor2__SearchFieldFromTo__c</fullName>
        <label>SearchTerm</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>SearchCondition</label>
    <listViews>
        <fullName>SkyEditor2__All</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>No</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>